#8819 closed defect (fixed)
Bayer pixel formats and hflip/vflip
| Reported by: | Reto Kromer | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | avfilter |
| Version: | git-master | Keywords: | hflip vflip |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
There is a phase issue in the CineForm RAW decoder: the colours change when the image is flipped horizontally and/or vertically.
How to reproduce:
ffplay input -vf hflip ffplay input -vf vflip ffplay input -vf hflip,vflip
ffmpeg version used:
N-98558-g93694fe777
on both macOS 10.14.6 and Debian 10.4
Attachments (3)
Change History (9)
by , 6 years ago
| Attachment: | original.jpeg added |
|---|
comment:1 by , 6 years ago
| Component: | avcodec → avfilter |
|---|---|
| Keywords: | hflip vflip added |
comment:2 by , 6 years ago
| Summary: | CineForm RAW → Bayer pixel formats and hflip/flip |
|---|
comment:4 by , 6 years ago
| Reproduced by developer: | set |
|---|---|
| Resolution: | → fixed |
| Status: | new → closed |
vflip should be fixed in 3490108f95b5a350f75df8443b00fbeebcdf068d
comment:5 by , 6 years ago
| Summary: | Bayer pixel formats and hflip/flip → Bayer pixel formats and hflip/vflip |
|---|
comment:6 by , 6 years ago
Indeed, I just checked and my files play now correctly. Thank you very much!
Note:
See TracTickets
for help on using tickets.



original file