lavfi/hflip: Support Bayer pixel formats.

Fixes part of ticket #8819.